--- a/tests/Glade/Example2/ex.ui
+++ b/tests/Glade/Example2/ex.ui
@@ -7,7 +7,6 @@
     <property name="can_focus">False</property>
     <property name="border_width">10</property>
     <property name="title">Grid</property>
-    <signal name="check-resize" handler="window-resized" swapped="no"/>
     <child>
       <placeholder/>
     </child>
@@ -85,12 +84,14 @@
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
+          <object class="GtkScrolledWindow" id="ScrolledOutputTxt">
             <property name="width_request">200</property>
             <property name="height_request">300</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="shadow_type">in</property>
+            <property name="max_content_width">200</property>
+            <property name="max_content_height">300</property>
             <child>
               <object class="GtkTextView" id="outputTxt">
                 <property name="width_request">200</property>
